fix lable alignement issue #557

--- a/src/app/wallet/wallet/receive/receive.component.scss
+++ b/src/app/wallet/wallet/receive/receive.component.scss
@@ -67,6 +67,9 @@
     button.copy {
       margin-bottom: 10px;
     }
+    .mat-icon {
+      height: 16px;
+    }
   }
 }
  
