--- a/src/assets/theme.scss
+++ b/src/assets/theme.scss
@@ -443,3 +443,8 @@ input {
 .capitalize {
   text-transform: capitalize;
 }
+
+// ------ Modal text lable alignment ------ //
+.modal-text-align {
+  margin-top: 20px !important;
+}
